# spotbot

./: .gitignore  Cargo.toml  README.md  entsoe.rest  exchange-rates.json
src/: currencies.rs  entsoe.rs  main.rs  parser.rs  plotter.rs  poster.rs
